--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-speech-recognition": "^4.0.1"
   },
