--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.13.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
